--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
-<h1>Привет, я автор</h1>
+<h1>Привет, если ты хочешь почувсвовать себя бездарем, тебе сюда</h1>
 <p>
-  Тут я размещу информацию о себе, используя свои умения верстать.
-  Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. 
+  Было ли у вас такое, что апатия и чувсво безнадежности овладевали вами? 
+  Нет? На этом курсе вы сможете ощутить такую палитру ощущний, что вы станете семелье чувсв
 </p>
-{% endblock %} 
+{% endblock %}
