--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Технологии{% endblock %}
 {% block content %}
+
 <div class="row">
-  <h1>Вот что я умею</h1>
+  <h1>Вот что мне помогает достичь успеха в моем непростом деле</h1>
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
@@ -11,6 +12,13 @@
       <li class="list-group-item">
         Django
       </li>
+      <li class="list-group-item">
+        SQL
+      </li>
+      <li class="list-group-item">
+        HTML
+      </li>
+
     </ul>
   </aside>
   <article class="col-12 col-md-9">
