--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,15 +1,14 @@
 {% extends 'base.html' %}
 {% load cache %}
-
 {% block title %}
-    Последние обновления на сайте
+    Посты автора
 {% endblock %}
 {% block content %}
     {% include 'includes/switcher.html' %}
-    <h1>Последние обновления на сайте</h1>
+    <h1>Посты автора</h1>
     {% cache 20 index_page %}
     {% for post in page_obj %}
-        {% include 'includes/list_posts.html' with flag_group_link=True  %}
+        {% include 'includes/list_posts.html' with flag_group_link=True %}
         {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     {% endcache %}
