--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
+{% load static %}
 {% block title %}
-  Записи сообщества {{ group.title }}
+    Записи сообщества: {{ group.title }}
 {% endblock %}
 {% block content %}
-  <h1>{{ group.title }}</h1>
-  <p>
-    {{group.description}}
-  </p>
-  {% for post in posts %}
-    {% include 'includes/article.html' %}
-    {% if not forloop.last %}<hr>{% endif %}
-  {% endfor %}
+    <h1>{{ group.title }}</h1>
+    {{ group.description|linebreaks }}
+    {% for post in posts %}
+        {% include 'includes/list_posts.html' with flag_group_link=False %}
+        {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+    {% include 'includes/paginator.html' %}
 {% endblock %}
