--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,12 +1,36 @@
 {% extends 'base.html' %}
-{% block title %}Профиль пользователя{% endblock %}
+{% load thumbnail %}
+{% block title %}
+    Профайл пользователя {{ username }}
+{% endblock %}
 {% block content %}
-  <h1>Все посты пользователя {{ author.username }}</h1>
-  <h3>Всего постов: {{ author.posts.count }}</h3>
-  {% for post in page_obj %}
-    {% include 'includes/article.html' %}
-    {% if not forloop.last %}<hr>{% endif %}
-    {% include 'includes/comments.html' %}
-  {% endfor %}
-  {% include 'includes/paginator.html' %}
+    <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+    <h3>Всего постов: {{ author.posts.count }} </h3>
+    <h3>Подписчиков: {{ author.follower.count }} </h3>
+    <h3>Подписок: {{ author.following.count }} </h3>
+    {% if request.user.is_authenticated %}
+    {% if author != request.user %}
+        {% if following %}
+            <a
+                class="btn btn-lg btn-light"
+                href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+            >
+                Отписаться
+            </a>
+        {% else %}
+             <a
+                 class="btn btn-lg btn-primary"
+                 href="{% url 'posts:profile_follow' author.username %}" role="button"
+             >
+              Подписаться
+            </a>
+        {% endif %}
+    {% endif %}
+    {% endif %}
+    {% for post in page_obj %}
+        {% include 'includes/list_posts.html' with flag_group_link=True  %}
+        {% if not forloop.last %}
+        <hr>{% endif %}
+    {% endfor %}
+    {% include 'includes/paginator.html' %}
 {% endblock %}
