--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load cache %}
 
 {% block title %}
     Последние обновления на сайте
@@ -6,9 +7,11 @@
 {% block content %}
     {% include 'includes/switcher.html' %}
     <h1>Последние обновления на сайте</h1>
+    {% cache 20 index_page %}
     {% for post in page_obj %}
         {% include 'includes/list_posts.html' with flag_group_link=True  %}
         {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     {% include 'includes/paginator.html' %}
+    {% endcache %}
 {% endblock %}
